--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-mask",
-  "version": "6.1.2",
+  "name": "ngx-mask-fixed",
+  "version": "2.0.0",
   "description": "awesome ngx mask",
   "license": "MIT",
   "angular-cli": {},
@@ -28,52 +28,52 @@
     "url": "https://github.com/NepipenkoIgor/ngx-mask.git"
   },
   "peerDependencies": {
-    "@angular/common": ">=6.0.0",
-    "@angular/core": ">=6.0.0",
-    "@angular/forms": ">=6.0.0"
+    "@angular/common": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/forms": ">=4.0.0"
   },
   "dependencies": {
-    "@angular-devkit/core": "0.6.8",
-    "@angular/animations": "6.0.9",
-    "@angular/common": "6.0.9",
-    "@angular/compiler": "6.0.9",
-    "@angular/core": "6.0.9",
-    "@angular/forms": "6.0.9",
-    "@angular/platform-browser": "6.0.9",
-    "@angular/platform-browser-dynamic": "6.0.9",
-    "core-js": "2.5.7",
-    "zone.js": "0.8.26"
+    "@angular-devkit/core": ">=0.6.8",
+    "@angular/animations": ">=4.0.0",
+    "@angular/common": ">=4.0.0",
+    "@angular/compiler": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/forms": ">=4.0.0",
+    "@angular/platform-browser": ">=4.0.0",
+    "@angular/platform-browser-dynamic": ">=4.0.0",
+    "core-js": ">=2.5.1",
+    "zone.js": ">=0.8.18"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.0",
     "@angular/cdk": "6.4.0",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.9",
+    "@angular/cli": ">=1.4.9",
+    "@angular/compiler-cli": ">=4.4.6",
     "@angular/material": "6.4.0",
     "@types/highlight.js": "9.12.3",
-    "@types/jasmine": "2.8.8",
-    "@types/node": "10.5.2",
+    "@types/jasmine": ">=2.5.54",
+    "@types/node": ">=6.0.90",
     "angular-cli-ghpages": "0.5.2",
     "bootstrap": "4.1.2",
-    "codelyzer": "4.4.2",
+    "codelyzer": ">=3.2.1",
     "hammerjs": "2.0.8",
-    "jasmine-core": "3.1.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.4",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.2.0",
+    "jasmine-core": ">=2.6.4",
+    "jasmine-spec-reporter": ">=4.1.1",
+    "karma": ">=1.7.1",
+    "karma-chrome-launcher": ">=2.1.1",
+    "karma-cli": ">=1.0.1",
+    "karma-coverage-istanbul-reporter": ">=1.3.0",
+    "karma-jasmine": ">=1.1.0",
+    "karma-jasmine-html-reporter": ">=0.2.2",
     "ng-packagr": "4.0.0",
     "node-sass": "4.9.2",
     "pre-commit": "1.2.2",
     "rxjs": "6.2.2",
     "sass-loader": "7.0.3",
     "ts-helpers": "1.1.2",
-    "ts-node": "7.0.0",
-    "tslint": "5.11.0",
-    "typescript": "2.7.2",
+    "ts-node": ">=3.2.2",
+    "tslint": ">=5.7.0",
+    "typescript": ">=2.4.2",
     "webdriver-manager": "12.1.0"
   },
   "pre-commit": [
