--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "ts-helpers": "1.1.2",
     "ts-node": ">=3.2.2",
     "tslint": ">=5.7.0",
-    "typescript": ">=2.4.2",
+    "typescript": "2.7.2",
     "webdriver-manager": "12.1.0"
   },
   "pre-commit": [
