--- a/package.json
+++ b/package.json
@@ -33,18 +33,15 @@
     "@angular/forms": ">=4.0.0"
   },
   "dependencies": {
-    "@angular-devkit/core": ">=0.6.8",
-    "@angular/animations": ">=4.0.0",
-    "@angular/common": ">=4.0.0",
-    "@angular/compiler": ">=4.0.0",
-    "@angular/core": ">=4.0.0",
-    "@angular/forms": ">=4.0.0",
-    "@angular/platform-browser": ">=4.0.0",
-    "@angular/platform-browser-dynamic": ">=4.0.0",
-    "core-js": ">=2.5.1",
-    "zone.js": ">=0.8.18"
   },
   "devDependencies": {
+    "core-js": ">=2.5.1",
+    "zone.js": ">=0.8.18",
+    "@angular-devkit/core": "0.6.8",
+    "@angular/compiler": ">=4.0.0",
+    "@angular/platform-browser": ">=4.0.0",
+    "@angular/platform-browser-dynamic": ">=4.0.0",
+    "@angular/animations": ">=4.0.0",
     "@angular-devkit/build-angular": "0.6.0",
     "@angular/cdk": "6.4.0",
     "@angular/cli": ">=1.4.9",
