--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,18 @@
+coverage
+e2e
+build
 src
-types
+.angular-cli.json
 .editorconfig
 .vscode
-angular-cli.json
+.gitignore
+.npmignore
+.sass-lint.yml
+.scannerwork
+Dockerfile  
+Jenkinsfile
 karma.conf.js
 protractor.conf.js
-tslint.json
-.idea
-.angular-cli.json
+sonar-project.properties
 tsconfig.json
+tslint.json
