--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mask-fixed",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "awesome ngx mask",
   "license": "MIT",
   "angular-cli": {},
@@ -21,56 +21,55 @@
     "start": "ng serve",
     "test": "ng test",
     "lint": "tslint './src/app/**/*.ts'",
-    "build:library": "ng-packagr -p package.json"
+    "build:package-lnx": "rm -rf ./dist && ./node_modules/.bin/ngc -p ./src/tsconfig.json"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/NepipenkoIgor/ngx-mask.git"
-  },
-  "peerDependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/core": "4.4.6",
-    "@angular/forms": "4.4.6",
-    "@angular-devkit/core": "0.6.8",
-    "@angular/compiler": "6.0.8",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
-    "core-js": "2.5.1",
-    "zone.js": "0.8.18"
+    "url": "https://github.com/jl91/ngx-mask.git"
   },
   "dependencies": {
+    "@angular/animations": "4.4.6",
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/router": "4.4.6",
+    "calc-js": "1.1.4",
+    "class-transformer": "0.1.6",
+    "class-transformer-validator": "0.2.0",
+    "class-validator": "0.7.1",
+    "core-js": "2.5.1",
+    "moment": "2.19.4",
+    "moment-timezone": "0.5.17",
+    "rxjs": "5.5.5",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.0",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.8",
-    "@types/highlight.js": "9.12.3",
-    "@types/jasmine": "2.8.8",
-    "@types/node": "10.5.2",
-    "angular-cli-ghpages": "0.5.2",
-    "codelyzer": "4.4.2",
-    "hammerjs": "2.0.8",
-    "jasmine-core": "3.1.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.4",
-    "karma-chrome-launcher": "2.2.0",
+    "@angular-devkit/schematics": "0.0.40",
+    "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/language-service": "4.4.6",
+    "@types/jasmine": "2.5.54",
+    "@types/jasminewd2": "2.0.3",
+    "@types/moment-timezone": "0.5.4",
+    "@types/node": "6.0.90",
+    "codelyzer": "3.2.1",
+    "jasmine-core": "2.6.4",
+    "jasmine-spec-reporter": "4.1.1",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.1.1",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.2.0",
-    "ng-packagr": "4.0.0",
-    "pre-commit": "1.2.2",
-    "rxjs": "6.2.2",
-    "sass-loader": "7.0.3",
-    "ts-helpers": "1.1.2",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-firefox-launcher": "1.0.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "sass-lint": "1.12.1",
     "ts-node": "3.2.2",
-    "tslint": "5.11.0",
-    "typescript": "2.7.2",
-    "webdriver-manager": "12.1.0"
-  },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
-  "ngPackage": true
+    "tslint": "5.7.0",
+    "typedoc": "0.10.0",
+    "typescript": "2.4.2"
+  }
 }
