--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,19 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strict": true,
-    "strictPropertyInitialization": false,
-    "skipLibCheck": true,
     "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
       "es2017",
       "dom"
-    ],
-    "typeRoots": [
-      "node_modules/@types",
-      "types"
     ]
   }
 }
